--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ DB_PASSWORD=postgres
 API_PORT=8080
 API_HTTPS_PORT=8081
 ASPNETCORE_ENVIRONMENT=Production
+
+# JWT Configuration
+JWT_SECRET_KEY=your_jwt_secret_key_here
